# ft_malcolm

./: .env  CMakeLists.txt  Makefile  README.md  clean.sh  docker-compose.yml
docker_file/: Dockerfile.ft_malcolm  Dockerfile.source  Dockerfile.victim
inc/: ft_malcolm.h
libft/: CMakeLists.txt
libft/src/: ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isdigit.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c
src/: arp.c  main.c  utils.c
src/libft/: CMakeLists.txt
src/libft/src/: clean_split.c  ft_atoi.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstclear.c  ft_lstfilter.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstsize.c  ft_lstsort.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strlen.c  ft_strmapi.c  ft_strrchr.c  ft_tolower.c  ft_toupper.c
